[project]
name = "advanced-sql"
version = "0.1.0"
description = "365 Data Science Advanced SQL, using PostgreSQL, Marimo and DuckDB."
readme = "README.md"
authors = [
    { name = "Rajdeep Sandhu", email = "168480080+rajdeep-sandhu@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "marimo[recommended]>=0.21.1",
    "psycopg[binary]>=3.3.3",
    "sqlalchemy>=2.0.48",
]

[project.scripts]
3ds-advanced-sql = "advanced_sql:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
